tests/sksl/errors/ReservedNameInput.glsl
### Compilation failed:

error: 1: name 'input' is reserved
int input;
    ^^^^^
1 error
